--- a/Dinners Dilemma/Dinners Dilemma.csproj
+++ b/Dinners Dilemma/Dinners Dilemma.csproj
@@ -15,7 +15,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Include="bin\Debug\net8.0\assets\elphet.png" />
+        <Content Include="assets\**\*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="bin\Debug\net8.0\" />
     </ItemGroup>
 
 </Project>
